--- a/README
+++ b/README
@@ -5,3 +5,8 @@ asi me sirve de practica de lectura, y de practica de transcripcion con un siste
 pero extremadamente flexible.
 
 ..hay un abc2ly, para convertir las partituras en formato ABC a Lylipond (!)
+
+...
+20160826
+tambien sirve como taller de corta/pega de pdfs, para montar "libretos" de trabajo con las paginas
+que hay que estudiar en cada tiempo.
